--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ul>
     </section>
     <section id="frameworks">
-      <h2 class="content__title">Библиотеки JavaScript</h2>
+      <h2 class="content__title">Библиотеки JavaScript11</h2>
       <div class="flex-row flex-row_reversed flex-row_space_bottom">
         <div class="flex-column flex-column_reversed">
           <div class="project project_width_l project_height_s">
